<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="key.utilitario.com.bancodesenhas.Exibicao"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        >

        <TableRow
            android:id="@+id/TR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/descricao"
                android:text="@string/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textSize="15sp"
                android:text="@string/data"
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </TableRow>
        <Button
            android:textSize="32sp"
            android:text="@string/vlt"
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableLayout>



</LinearLayout>
