<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="key.utilitario.com.bancodesenhas.Cadastrar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textSize="20pt"
        />

    <EditText
        android:id="@+id/ky1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:textSize="20pt"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rep"
        android:textSize="20pt"
        />
    <EditText
        android:id="@+id/ky2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:textSize="20pt"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dica"
        android:textSize="20pt"
        />

    <EditText
        android:id="@+id/dca0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20pt"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/slv"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vlt"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textStyle="bold"
            android:text="@string/vlt"
            />
    </LinearLayout>

    <include layout="@layout/content_cadastrar" />

</LinearLayout>
