<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Key">

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textSize="20pt"
        />

    <EditText
        android:id="@+id/ky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20pt"
        android:textStyle="bold" />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style=""
            ></LinearLayout>
        <Button
            android:id="@+id/btAce"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/btAce"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style=""
            ></LinearLayout>
        <!--<Button
            android:id="@+id/dica"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/dica"
            android:textStyle="bold"
            />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="100dp"
        >
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style=""
            ></LinearLayout>

        <Button
            android:id="@+id/apg"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/apg"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style=""
            ></LinearLayout>
        <Button
            android:id="@+id/cad"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/cds"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>
